--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
-    
+<header>
+    <h1>Home Make Decoraciones</h1>
+    <nav>
+        <ul>
+            <li><a href="">Quienes Somos</a></li>
+            <li><a href="">Contactanos</a></li>
+            <li><a href="">Presupuesto</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- Comienzo del Footer -->
+<footer>
+    <section>
+        <h2>Redes Sociales</h2>
+        <ul>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+        </ul>
+    </section>
+
+<!-- Navegacion entre paginas -->
+
+<!-- Fin de Navegacion entre paginas -->
+
+
+</footer>
+<!-- Final del footer -->
 </body>
+
 </html>
