Linkeamos todas las paginas y puse las rutas de linkeado

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -21,10 +21,10 @@
         <h1>Home Maker Decoraciones</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-                <li><a href="pages/contactanos.html">Contactanos</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="quienesomos.html">Quienes Somos</a></li>
+                <li><a href="contactanos.html">Contactanos</a></li>
+                <li><a href="productos.html">Productos</a></li>
             </ul>
         </nav>
     </header>
@@ -42,11 +42,11 @@
         </section>
 
         <!-- Navegacion entre paginas -->
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-        <li><a href="pages/contactanos.html">Contactanos</a></li>
-        <li><a href="pages/productos.html">Productos</a></li>
-        <!-- Fin de Navegacion entre paginas -->
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="quienesomos.html">Quienes Somos</a></li>
+        <li><a href="contactanos.html">Contactanos</a></li>
+        <li><a href="productos.html">Productos</a></li>
+<!-- Fin de Navegacion entre paginas -->
 
     </footer>
     <!-- Final del footer -->
