Descripcion de cada pagina en Main

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         </nav>
     </header>
 
+    <!-- Main Content -->
+    <section>
+        <Main>
+            <h2>Somos Home Maker S.A.</h2>
+            <p>Especializacion en muebles trabajados a mano y tambien industrializados <br>
+            Todos nuestros Equipamientos vienen con una garantia de 2 años</p>
+        </Main>
+
+
     <!-- Comienzo del Footer -->
     <footer>
 
