--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Maker | Main </title>
+    <title>Home Maker | Contact Us </title>
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>Home Maker Decoraciones</h1>
+        <h1>Home Maker Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -29,32 +29,44 @@
         </nav>
     </header>
 
-    <!-- Comienzo del Footer -->
-    <footer>
+    <!-- Main Content -->
+    <section>
+        <Main>
+            <h2>No se lo pierda</h2>
+            <p>Si desea mas informacion puede visitar nuestras redes sociales. <br>
+                Como tambien puede contactarnos a travez de nuestro mail, o puede contactarnos a nuestro Whatsapp de la
+                empresa.
+                Ofrecemos asesoria 24hs. <br>
+                Nuestros presupuestos son sin cargo y puede consultar cualquier duda que tenga, lo esperamos !</p>
+        </Main>
 
-        <section>
-            <h2>Redes Sociales</h2>
-            <ul>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-            </ul>
-        </section>
 
-        <!-- Navegacion entre paginas -->
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="quienesomos.html">Quienes Somos</a></li>
-        <li><a href="contactanos.html">Contactanos</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <!-- Fin de Navegacion entre paginas -->
+        <!-- Comienzo del Footer -->
+        <footer>
 
-    </footer>
-    <!-- Final del footer -->
+            <section>
+                <h2>Redes Sociales</h2>
+                <ul>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Twitter</a></li>
+                </ul>
+            </section>
 
-    <!-- Script de bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+            <!-- Navegacion entre paginas -->
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienesomos.html">Quienes Somos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <!-- Fin de Navegacion entre paginas -->
+
+        </footer>
+        <!-- Final del footer -->
+
+        <!-- Script de bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
