--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Maker | Main </title>
+    <title>Home Maker | Productos </title>
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>Home Maker Decoraciones</h1>
+        <h1>Home Maker Productos</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -28,6 +28,15 @@
             </ul>
         </nav>
     </header>
+
+<!-- Main Content -->
+<section>
+    <Main>
+        <h2>Nuestra Pasión</h2>
+        <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
+        Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos.
+    Por que para nosotros el confort tuyo es nuestro deber !</p>
+    </Main>
 
     <!-- Comienzo del Footer -->
     <footer>
