--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Maker | Main </title>
+    <title>Home Maker | About Us </title>
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>Home Maker Decoraciones</h1>
+        <h1>Home Maker About Us</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -29,6 +29,15 @@
         </nav>
     </header>
 
+<!-- Main Content -->
+    <section>
+        <Main>
+            <h2>Por que elegirnos</h2>
+            <p>Nos dedicamos a Todo lo que es decoracion de interiores , nuestro lema es "Casa bella , vida Bella". <br>
+            Nos apasiona la decoracion del hogar por eso cualquier diseño que se te ocurra veni a nuestra sucursal y nosotros te asesoramos en como adaptarlo a tu hogar !</p>
+        </Main>
+
+    </section>
     <!-- Comienzo del Footer -->
     <footer>
 
