Secciones principales creadas y algunas clases

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Main Content -->
-    <section>
+    <section class="mainContent">
         <Main>
             <h2>No se lo pierda</h2>
             <p>Si desea mas informacion puede visitar nuestras redes sociales. <br>
@@ -42,7 +42,7 @@
 
 
         <!-- Comienzo del Footer -->
-        <footer>
+        <footer class="footer">
 
             <section>
                 <h2>Redes Sociales</h2>
@@ -54,10 +54,14 @@
             </section>
 
             <!-- Navegacion entre paginas -->
+            <section class="footerNav">
+            
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="quienesomos.html">Quienes Somos</a></li>
             <li><a href="contactanos.html">Contactanos</a></li>
-            <li><a href="productos.html">Productos</a></li>
+            <li><a href="productos.html">Productos</a></li> 
+            
+            </section>
             <!-- Fin de Navegacion entre paginas -->
 
         </footer>
