--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,7 +30,7 @@
     </header>
 
 <!-- Main Content -->
-<section>
+<section class="mainContent">
     <Main>
         <h2>Nuestra Pasión</h2>
         <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
@@ -39,7 +39,7 @@
     </Main>
 
     <!-- Comienzo del Footer -->
-    <footer>
+    <footer class="footer">
 
         <section>
             <h2>Redes Sociales</h2>
@@ -51,10 +51,14 @@
         </section>
 
         <!-- Navegacion entre paginas -->
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="quienesomos.html">Quienes Somos</a></li>
-        <li><a href="contactanos.html">Contactanos</a></li>
-        <li><a href="productos.html">Productos</a></li>
+            <section class="footerNav">
+            
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienesomos.html">Quienes Somos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="productos.html">Productos</a></li> 
+            
+            </section>
 <!-- Fin de Navegacion entre paginas -->
 
     </footer>
