--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -30,8 +30,8 @@
     </header>
 
 <!-- Main Content -->
-    <section>
-        <Main>
+<section class="mainContent">
+    <Main>
             <h2>Por que elegirnos</h2>
             <p>Nos dedicamos a Todo lo que es decoracion de interiores , nuestro lema es "Casa bella , vida Bella". <br>
             Nos apasiona la decoracion del hogar por eso cualquier diseño que se te ocurra veni a nuestra sucursal y nosotros te asesoramos en como adaptarlo a tu hogar !</p>
@@ -39,7 +39,7 @@
 
     </section>
     <!-- Comienzo del Footer -->
-    <footer>
+    <footer class="footer">
 
         <section>
             <h2>Redes Sociales</h2>
@@ -51,10 +51,14 @@
         </section>
 
         <!-- Navegacion entre paginas -->
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="quienesomos.html">Quienes Somos</a></li>
-        <li><a href="contactanos.html">Contactanos</a></li>
-        <li><a href="productos.html">Productos</a></li>
+            <section class="footerNav">
+            
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienesomos.html">Quienes Somos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="productos.html">Productos</a></li> 
+            
+            </section>
         <!-- Fin de Navegacion entre paginas -->
 
     </footer>
