--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
     </header>
 
     <!-- Main Content -->
-    <section>
+    <section class="mainContent">
         <Main>
-            <h2>Somos Home Maker S.A.</h2>
-            <p>Especializacion en muebles trabajados a mano y tambien industrializados <br>
-            Todos nuestros Equipamientos vienen con una garantia de 2 años</p>
+            <h2>Somos Home Maker</h2>
+            <p>10 Años creando y decorando para disfrute y confort del ambiente de nuestros usuarios, creemos fielmente
+                en que una casa bien decorada es Un Hogar. <br>
+                Nos especializamos en muebles trabajados a mano y tambien industrializados <br>
+                Todos nuestros Equipamientos vienen con una garantia de 2 años</p>
         </Main>
 
 
-    <!-- Comienzo del Footer -->
-    <footer>
+        <!-- Comienzo del Footer -->
+        <section class="footerNav">
 
-        <section>
-            <h2>Redes Sociales</h2>
-            <ul>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-            </ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienesomos.html">Quienes Somos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="productos.html">Productos</a></li>
+
         </section>
 
         <!-- Navegacion entre paginas -->
@@ -57,13 +57,13 @@
         <li><a href="pages/productos.html">Productos</a></li>
         <!-- Fin de Navegacion entre paginas -->
 
-    </footer>
-    <!-- Final del footer -->
+        </footer>
+        <!-- Final del footer -->
 
-    <!-- Script de bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        <!-- Script de bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
