--- a/index.html
+++ b/index.html
@@ -11,59 +11,213 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <!-- CSS AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Mi CSS LINK -->
     <link rel="stylesheet" href="css/estilo.css">
 
 </head>
 
 <body>
-    <header>
-        <h1>Home Maker Decoraciones</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-                <li><a href="pages/contactanos.html">Contactanos</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
-            </ul>
+    <!-- Nav bar -->
+    <header class="header">
+        <nav class="navbar headerNav navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+                        data-aos-duration="500">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">|Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/quienesomos.html">|Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contactanos.html">|Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/productos.html">|Productos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
+    <!-- Fin Nav bar -->
+
+    <!-- Carrousel -->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/Ambientes/ambiente 1.jpg" class="carouselFondo d-block w-100"
+                    alt="Ambiente color blanco">
+            </div>
+            <div class="carousel-item">
+                <img src="images/Ambientes/ambiente 2.png" class="carouselFondo d-block w-100"
+                    alt="Ambiente tematica azul">
+            </div>
+            <div class="carousel-item">
+                <img src="images/Ambientes/ambiente 3.jpg" class="carouselFondo d-block w-100"
+                    alt="Ambiente color gris con piedra">
+            </div>
+            <div class="carousel-item">
+                <img src="images/Ambientes/ambiente 4.jpg" class="carouselFondo d-block w-100"
+                    alt="Ambiente color crema">
+            </div>
+            <div class="carousel-item">
+                <img src="images/Ambientes/ambiente 5.jpg" class="carouselFondo d-block w-100"
+                    alt="Ambiente color blanco y negro">
+            </div>
+
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
 
     <!-- Main Content -->
     <section class="mainContent">
         <Main>
-            <h2>Somos Home Maker</h2>
-            <p>10 Años creando y decorando para disfrute y confort del ambiente de nuestros usuarios, creemos fielmente
-                en que una casa bien decorada es Un Hogar. <br>
-                Nos especializamos en muebles trabajados a mano y tambien industrializados <br>
-                Todos nuestros Equipamientos vienen con una garantia de 2 años</p>
+            <div data-aos="fade-up">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            <h1>Somos Home Maker</h1>
+                            <p>10 Años creando y decorando para disfrute y confort del ambiente de nuestros usuarios,
+                                creemos
+                                fielmente en que una casa bien decorada es Un Hogar.</p>
+                        </div>
+                        <div class="col">
+                            <h2>Como trabajamos</h2>
+                            <p>Nos especializamos en muebles trabajados a mano y tambien industrializados, todos
+                                nuestros Equipamientos vienen con una garantia de 2 años</p>
+                        </div>
+                    </div>
+        </div>
         </Main>
+<!-- Fin Main Content -->
+
+<!-- MUESTRA DE PRODUCTOS A OFRECER -->
+<section class="muestraProductos Cardshow">
+    <h2 class="queofrecemos">Que Ofrecemos</h2>
+
+    <div class="container1 text-center">
+        <div class="row">
+
+            <!-- Card 1 -->
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top" alt="Cama con respaldo madera">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="container2 text-center">
+
+            <div class="row">
+                <!-- Card 3 -->
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+              </div>
+
+              <!-- Card 4 -->
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa patas de madera con sillas">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="container3 text-center">
+
+                <div class="row">
+                    <!-- Card 5 -->
+                  <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+    
+                  <!-- Card 6 -->
+                  <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top" alt="Mueble de mesa madera prensada">
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+    
+</section>
 
 
-        <!-- Comienzo del Footer -->
-        <section class="footerNav">
+    <!-- Comienzo del Footer -->
+    <footer>
 
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienesomos.html">Quienes Somos</a></li>
-            <li><a href="contactanos.html">Contactanos</a></li>
-            <li><a href="productos.html">Productos</a></li>
+<!-- Navegacion entre paginas -->
+<section class="footerNav">
 
-        </section>
+<li><a href="../index.html">Inicio</a></li>
+<li><a href="quienesomos.html">Quienes Somos</a></li>
+<li><a href="contactanos.html">Contactanos</a></li>
+<li><a href="productos.html">Productos</a></li>
 
-        <!-- Navegacion entre paginas -->
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-        <li><a href="pages/contactanos.html">Contactanos</a></li>
-        <li><a href="pages/productos.html">Productos</a></li>
-        <!-- Fin de Navegacion entre paginas -->
+</section>
+<!-- Fin de Navegacion entre paginas -->
 
-        </footer>
-        <!-- Final del footer -->
+</footer>
+<!-- Final del footer -->
 
-        <!-- Script de bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
+<!-- Script de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+crossorigin="anonymous"></script>
+
+<!-- Aos Script -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 
 </html>
