--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,21 +18,37 @@
 
 <body>
     <header>
-        <h1>Home Maker Productos</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="quienesomos.html">Quienes Somos</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-                <li><a href="productos.html">Productos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Home Maker Decoraciones</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/quienesomos.html">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contactanos.html">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/productos.html">Productos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-    </header>
+        </header>
 
 <!-- Main Content -->
 <section class="mainContent">
     <Main>
-        <h2>Nuestra Pasión</h2>
+        <h1>Nuestra Pasión</h1>
         <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
         Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos.
     Por que para nosotros el confort tuyo es nuestro deber !</p>
