modifique el footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top" alt="Cama con respaldo madera">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">De nuestras mejores camas/sommier con respaldo para un buen descanso , para un mejor confort.</p>
                 </div>
               </div>
           </div>
@@ -134,7 +134,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Ofrecemos de nuestra gama de productos selectos varios kit de instalacion para el baño completo, esta incluido en nuestros presupuestos.</p>
                 </div>
               </div>
           </div>
@@ -148,7 +148,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Siempre es bueno cocinar con buen espacio para manejar lo utensilios ,como manipular los alimentos , por eso ofrecemos nuestro set de mesada con bacha.</p>
                     </div>
                   </div>
               </div>
@@ -158,7 +158,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa patas de madera con sillas">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">La sala de estar es importante a la hora de recibir invitados , para eso tenemos mesas y sillas que ofrecen estilo y adorno en un solo conjunto de mueble para la sala.</p>
                     </div>
                   </div>
               </div>
@@ -172,17 +172,17 @@
                     <div class="card" style="width: 18rem;">
                         <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text">Nada como llegar a la casa luego de un largo dia y poder disfrutar de mirar una pelicula o el partido del equipo favorito , para eso tenemos nuestros sillones premium.</p>
                         </div>
                       </div>
                   </div>
     
                   <!-- Card 6 -->
                   <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem;" >
                         <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top" alt="Mueble de mesa madera prensada">
-                        <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="card-body" >
+                          <p class="card-text">Se vienen los partidos mas interesantes de la temporada , y que mejor que tener un buen mueble para apoyar la television y un buen equipo de sonido.</p>
                         </div>
                       </div>
                   </div>
@@ -192,19 +192,31 @@
 
 
     <!-- Comienzo del Footer -->
-    <footer>
-
-<!-- Navegacion entre paginas -->
-<section class="footerNav">
-
-<li><a href="../index.html">Inicio</a></li>
-<li><a href="quienesomos.html">Quienes Somos</a></li>
-<li><a href="contactanos.html">Contactanos</a></li>
-<li><a href="productos.html">Productos</a></li>
-
-</section>
-<!-- Fin de Navegacion entre paginas -->
-
+    <footer class="footerLinks">
+        <div class="container text-center">
+            <div class="row">
+            <div class="col">
+            <!-- Navegacion entre paginas -->
+            <section class="footerNav">
+            <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
+            <li><a href="pages/contactanos.html">Contactanos</a></li>
+            <li><a href="pages/productos.html">Productos</a></li>
+            </ul>
+            </section>
+            </div>
+            <div class="col">
+            <!-- Redes Sociales -->
+            <section class="redesSociales">
+            <ul class="listasRedes">
+            <li><a href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a></li>
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
+            </ul>
+            </section>
+            </div>
+            </div>
 </footer>
 <!-- Final del footer -->
 
