--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -45,6 +45,28 @@
         </nav>
         </header>
 
+
+
+
+        <div class="col-lg-5 aos-init aos-animate" data-aos="fade">
+            <form action="forms/quote.php" method="post" class="php-email-form">
+            <h3>Get a quote</h3>
+            <p>Vel nobis odio laboriosam et hic voluptatem. Inventore vitae totam. Rerum repellendus enim linead sero park flows.</p>
+            <div class="row gy-3">
+            <div class="col-md-12">
+            <input type="text" name="name" class="form-control" placeholder="Nombre" required=""></div>
+            <div class="col-md-12 "> 
+            <input type="email" class="form-control" name="email" placeholder="Email" required="">
+            </div>
+            <div class="col-md-12">
+            <input type="text" class="form-control" name="phone" placeholder="Telefono" required="">
+            </div>
+            <div class="col-md-12"><textarea class="form-control" name="message" rows="6" placeholder="Su Mensaje" required=""></textarea>
+            </div>
+            <div class="col-md-12 text-center">
+            <div class="error-message">
+            </div>
+            <button type="submit">Contactenos</button></div></div></form></div>
     <!-- Main Content -->
     <section class="mainContent">
         <Main>
