modificacion de texto en quienes somos

--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -90,23 +90,31 @@
 <!-- Main Content -->
 <section class="mainContent">
         <Main>
+            <div class="nosotros texto">
             <h1>Nosotros</h1>
             <p>Nos dedicamos a Todo lo que es decoracion de interiores , nuestro lema es "Casa bella , vida Bella". <br>
             Nos apasiona la decoracion del hogar por eso cualquier diseño que se te ocurra veni a nuestra sucursal <br> y nosotros te asesoramos en como adaptarlo a tu hogar !</p>
-        
+            </div>
+
+            <div class="trayectoria texto">
             <h2>Nuestra Trayectoria</h2>
             <p>Llevamos 10 años haciendo obras de hogar en decoracion , y ambientación. <br>
             Nuestro objetivo es lograr el confort y la belleza en los hogares de nuestros clientes.
             </p>
+            </div>
 
+            <div class="ventas texto">
             <h2>Ventas</h2>
             <p>Realizamos ventas a por mayor y por menor , preparamos tanto ambientación de hogares <br> 
             como tambien realizamos decoración de comercios , restaurantes y oficinas de recepción.</p>
+            </div>
 
+            <div class="ofertas texto">
             <h2>Ofertas</h2>
             <p>Tenemos Ofertas de tiempo limitado por la temporada. <br>
             Estamos Adheridos al Black Friday y Black Monday , no te pierdas nuestras ofertas <br>
             hasta un 40% Off en pagos con tarjeta y Ahora 18.</p>
+            </div>
         </Main>
 
     </section>
