se modifico contactanos

--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -52,24 +52,24 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/Ambientes/ambiente 1.jpg" class="carouselFondo d-block w-100"
-                        alt="Ambiente color blanco">
+                    <img src="../images/Cocinas/cocina1.jpg" class="carouselFondo d-block w-100"
+                        alt="Cocina blanca">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Ambientes/ambiente 2.png" class="carouselFondo d-block w-100"
-                        alt="Ambiente tematica azul">
+                    <img src="../images/Cocinas/cocina2.jpg" class="carouselFondo d-block w-100"
+                        alt="Cocina ambiente marron">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Ambientes/ambiente 3.jpg" class="carouselFondo d-block w-100"
-                        alt="Ambiente color gris con piedra">
+                    <img src="../images/Cocinas/cocina3.jpg" class="carouselFondo d-block w-100"
+                        alt="Cocina color beige">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Ambientes/ambiente 4.jpg" class="carouselFondo d-block w-100"
-                        alt="Ambiente color crema">
+                    <img src="../images/Cocinas/cocina4.jpg" class="carouselFondo d-block w-100"
+                        alt="Cocina color gris">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Ambientes/ambiente 5.jpg" class="carouselFondo d-block w-100"
-                        alt="Ambiente color blanco y negro">
+                    <img src="../images/Cocinas/cocina5.jpg" class="carouselFondo d-block w-100"
+                        alt="Cocina piso madera color ambar">
                 </div>
     
     
