agregue carrousel a Productos

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -127,17 +127,19 @@
             <div class="col">
             <!-- Navegacion entre paginas -->
             <section class="footerNav">
+            <h2>Paginas</h2>
             <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-            <li><a href="pages/contactanos.html">Contactanos</a></li>
-            <li><a href="pages/productos.html">Productos</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienesomos.html">Quienes Somos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="productos.html">Productos</a></li>
             </ul>
             </section>
             </div>
             <div class="col">
             <!-- Redes Sociales -->
             <section class="redesSociales">
+            <h2>Redes Sociales</h2>
             <ul class="listasRedes">
             <li><a href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a></li>
             <li><a href="https://www.facebook.com/">Facebook</a></li>
