coloque meta datos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Maker | Main </title>
+    <meta name="description" content="Venta de sillones , camas , mesas , equipamiento de baños">
+    <meta name="keywords" content="Muebles , Decoracion , Hogar">
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
