--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Maker | Contact Us </title>
-
+    <meta name="description" content="Contacte con nosotros mediante Facebook , Instagram y Whatsapp , tambien puede dejar un mensaje con su correo y anotando su numero">
+<meta name="keywords" content="Contactanos , Redes Sociales , Facebook , Instagram , Whatsapp , Correo Electronico">
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
