--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Maker | Productos </title>
-
+    <meta name="description" content="Vea nuestros productos , solo son una muestra de lo que tenemos en nuestro stock , conozca mucho mas contactandonos para solitar presupuesto y asesoria">
+    <meta name="keywords" content="Productos , Muebles , Venta , Conozca , Comprar Muebles">
     <!-- CSS Bootstrap -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -127,7 +129,7 @@
 <!-- Fin de muestras de Productos -->
 
 <!-- Main Content -->
-<section class="mainContentProductos">
+<section class="mainContent mainContentProductos">
     <Main>
         <h1>Nuestra Pasión</h1>
         <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
