--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Maker | About Us </title>
+    <meta name="description" content="Conozca como manejamos nuestras ventas y atencion y las increibles ofertas que tenemos"
+    >
+    <meta name="keywords" content="Ofertas , Ventas , Trayectoria">
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
